# ioxio-tags

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.js  LICENSE  README.md  export_api.py  import_api.py  openapi.json  openapi_hash.sha256  package.json  pnpm-lock.yaml
.github/: CONTRIBUTING.md
.github/workflows/: api-pytest.yaml  build-and-deploy-api.yaml  build-and-deploy-generator.yaml  build-and-deploy-landing_page.yaml  build-and-deploy-scanner.yaml  build-and-deploy.yaml  pre-commit-validation.yaml  test-scanner.yaml
api/: Dockerfile  README.md  conftest.py  demo_key_private.pub  main.py  make_jwks.py  pyproject.toml  settings.py  setup.cfg  tasks.py  testdata.py
api/app/: dataproduct.py  errors.py  log.py  responses.py  tag.py  utils.py
api/app/routes/: dataproduct.py  tag.py
api/app/routes/mocks/: test_garment_bill_of_materials_v0_1.py  test_garment_maintenance_log_v0_1.py  test_garment_manufacturer_information_v0_1.py  test_garment_material_disclosure_sheet_v0_1.py  test_garment_product_data_sheet_v0_1.py  test_product_carbon_footprint_v0_1.py
api/app/routes/tests/: test_dataproduct.py  test_tag.py
api/docker/: build-prepare.sh  build-setup.sh  runtime-entrypoint.sh  runtime-prepare.sh
demo_data/: README.md
demo_data/.well-known/: jwks.json  (+1 more)
generator/: .env.example  Dockerfile  README.md  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
landing_page/: Dockerfile  package.json  pnpm-lock.yaml  svelte.config.js
scanner/: .env.example  .eslintignore  .eslintrc.cjs  .gitignore  Dockerfile  README.md  capacitor.config.ts  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
(+135 files in other folders)
