[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = []
packages = [{ include = "app", from = "." }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.103.1"}
fastapi-standalone-docs = "^0.1.6"
typer = "^0.9.0"
deepdiff = "^6.5.0"
loguru = "^0.7.2"
cwt = "^2.5.0"
cbor2 = "^5.4.6"
base45 = "^0.4.4"
qrcode = {extras = ["pil"], version = "^7.4.2"}
httpx = "^0.25.0"
async-lru = "^2.0.4"
validators = "^0.22.0"
pillow = "^10.0.1"
cairosvg = "^2.7.1"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.21.1"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "tasks:run_command"
serve = "tasks:run_command"
export-api = "tasks:run_command"
