[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = []
packages = [{ include = "app", from = "." }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.115.12"}
fastapi-standalone-docs = "^0.2.0"
typer = "^0.15.2"
deepdiff = "^8.4.2"
loguru = "^0.7.3"
cwt = "^3.0.0"
cbor2 = "^5.6.5"
base45 = "^0.4.4"
qrcode = {version = "^8.1", extras = ["pil"]}
httpx = "^0.28.1"
async-lru = "^2.0.5"
validators = "^0.34.0"
pillow = "^11.2.1"
cairosvg = "^2.7.1"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.26.0"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "tasks:run_command"
serve = "tasks:run_command"
export-api = "tasks:run_command"
